[package]
name = "account"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.1", features = ["http2", "query", "tracing", "multipart"] }
chrono = { version = "0.4.39", features = ["serde"] }
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
sqlx-db-tester = "0.5.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "net"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }
